# rust-cli

./: .gitignore  Cargo.release-plz.toml  Cargo.toml  Dockerfile  Makefile  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
src/: example.rs  lib.rs  main.rs
tests/: integration_test.rs
